# esg-llm-platform

./: .gitignore  README.md  main.py  pyproject.toml
data/samples/: make_samples.py
docs/: 01-notebook-test-pipeline.html  02-notebook-analysis.html
notebooks/: 01-notebook-test-pipeline.ipynb  01-notebook.ipynb  02-notebook-analysis.ipynb  test_pipeline.ipynb
src/: run.py
src/esg/: config.py
src/esg/cli/: run_v2.py
src/esg/core/: types.py
src/esg/extractors/: llm_extractor.py  nlp_extractor.py  regex_extractor.py  table_grid_extractor.py  table_plain_extractor.py
src/esg/normalization/: llm_normalizer.py  nlp_normalizer.py  regex_normalizer.py  scoring.py  table_grid_normalizer.py  table_plain_normalizer.py
src/esg/pipeline/: io_utils.py  pipeline.py
src/esg/utils/: numeric_parser.py  pdf_reader.py
src/esg_system/: config.py
src/esg_system/core/: file_utils.py  pdf_reader.py  table_reader.py  text_cleaner.py
src/esg_system/schemas/: gri_kpis.json  mapping_rules.yaml  sasb_kpis.json  universal_kpis.json
src/esg_user/: types.py
src/esg_user/extractors/: llm_extractor.py  nlp_extractor.py  regex_extractor.py  table_engine.py  table_extractor.py  table_extractor_camelot.py  table_extractor_fitz.py
src/esg_user/pipeline/: assemble_output.py  extract_kpis.py  fusion.py  normalize_kpis.py
src/esg_user/prompts/: llm_prompts.py
src/esg_v2/cli/: run_v2.py
src/esg_v2/core/: types.py
tests/: test_llm.py  test_nlp.py  test_pipeline.py  test_regex.py  test_tables_grid.py  test_tables_plain.py  test_tables_v2.py  test_tables_v3.py
(+12 files in other folders)
